--- a/packages/samsara-bus-react/package.json
+++ b/packages/samsara-bus-react/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "samsara-bus-ts",
+  "name": "samsara-bus-react",
   "version": "1.0.0",
-  "description": "RxJS-based multi-topics message/event bus for TypeScript",
+  "description": "React hooks for samsara-bus-ts - RxJS-based message/event bus integration",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -10,37 +10,38 @@
     "test:watch": "jest --watch",
     "clean": "rm -rf dist",
     "dev": "node ../../node_modules/typescript/lib/tsc.js --watch",
-    "check-examples": "tsc --project tsconfig.examples.json --noEmit",
-    "run-examples": "npm run run-basic-example && npm run run-request-response-example",
-    "run-basic-example": "npx ts-node examples/samsara-bus-example.ts",
-    "run-request-response-example": "npx ts-node examples/request-response-example.ts",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
+    "react",
+    "hooks",
     "message-bus",
     "event-bus",
     "rxjs",
     "typescript",
     "reactive",
-    "publish-subscribe",
-    "messaging"
+    "samsara-bus"
   ],
-  "dependencies": {
+  "peerDependencies": {
+    "react": ">=16.8.0",
     "rxjs": "^7.8.0",
-    "uuid": "^9.0.0"
+    "samsara-bus-ts": "^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.0.0",
     "@types/node": "^24.2.0",
-    "@types/uuid": "^9.0.0",
+    "@types/react": "^18.0.0",
     "jest": "^29.0.0",
+    "react": "^18.0.0",
+    "rxjs": "^7.8.0",
+    "samsara-bus-ts": "^1.0.0",
     "ts-jest": "^29.0.0",
     "typescript": "^5.0.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Samsara-Stream/samsara-bus-ts.git",
-    "directory": "packages/samsara-bus-ts"
+    "directory": "packages/samsara-bus-react"
   },
   "author": "Samsara Stream",
   "license": "MIT",
